--- a/stylesheets/sass/_blog-and-article.scss
+++ b/stylesheets/sass/_blog-and-article.scss
@@ -74,6 +74,7 @@
       display: block;
       text-decoration: none;
       @include bg($black, 0.2);
+      @include perspective;
 
       &:hover {
         @include bg($black, 0.4);
